--- a/RBS-schedule.html
+++ b/RBS-schedule.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Run Before Study</title>
-    <link rel="stylesheet" href="../src/RBS-schedule.css">
+    <link rel="stylesheet" href="RBS-schedule.css">
 </head>
 <body>
     <header class="header">
