--- a/RBS-schedule.html
+++ b/RBS-schedule.html
@@ -15,9 +15,9 @@
 
     <nav>
         <ul>
-            <li><a href="./RBS.html">Home</a></li>
-            <li><a href="./RBS-schedule.html">Schedule</a></li>
-            <li><a href="../html/RBS-teammember.html">Team Member</a></li>
+            <li><a href="RBS.html">Home</a></li>
+            <li><a href="RBS-schedule.html">Schedule</a></li>
+            <li><a href="RBS-teammember.html">Team Member</a></li>
         </ul>
     </nav>
 
