--- a/RBS.html
+++ b/RBS.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Run Before Study</title>
-    <link rel="stylesheet" href="../src/RBS.css">
+    <link rel="stylesheet" href="RBS.css">
 </head>
 <body>
     <header class="header">
@@ -15,9 +15,9 @@
 
     <nav>
         <ul>
-            <li><a href="../html/RBS.html">Home</a></li>
-            <li><a href="../html/RBS-schedule.html">Schedule</a></li>
-            <li><a href="../html/RBS-teammember.html">Team Member</a></li>
+            <li><a href="RBS.html">Home</a></li>
+            <li><a href="RBS-schedule.html">Schedule</a></li>
+            <li><a href="RBS-teammember.html">Team Member</a></li>
         </ul>
     </nav>
 
