--- a/RBS-schedule.html
+++ b/RBS-schedule.html
@@ -15,7 +15,7 @@
 
     <nav>
         <ul>
-            <li><a href="https://apple-melon.github.io/RBS/">Home</a></li>
+            <li><a href="https://apple-melon.github.io/RBS">Home</a></li>
             <li><a href="RBS-schedule.html">Schedule</a></li>
             <li><a href="RBS-teammember.html">Team Member</a></li>
         </ul>
