--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <nav>
         <ul>
-            <li><a href="RBS.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="RBS-schedule.html">Schedule</a></li>
             <li><a href="RBS-teammember.html">Team Member</a></li>
         </ul>
